fixes ribbon size on small devices. SHOP-5711 #request-merge

--- a/templates/NOVA/themes/base/sass/components/_productbox.scss
+++ b/templates/NOVA/themes/base/sass/components/_productbox.scss
@@ -45,7 +45,12 @@
 	.btn { margin: map-get($spacers, 1); }
 }
 
-.productbox-ribbon.ribbon { position: absolute; z-index: 1; top: $spacer; left: -(map-get($spacers, 2)); transition: $transition-base; }
+.productbox-ribbon.ribbon { position: absolute; z-index: 1; top: $spacer; left: -(map-get($spacers, 2)); transition: $transition-base;
+	@include media-breakpoint-down(md) {
+		transform: scale(0.8);
+		left: -(map-get($spacers, 3)*1.1);
+	}
+}
 
 .productbox-sale-percentage { position: relative; top: -(map-get($spacers, 7)); }
 
